--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <body>
 
     <!-- Iframe apuntando al link corto -->
-    <iframe src="https://tinyurl.com/Rifa-masajeador"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/17e5fJo3hPwSFC8bfra3-W5s4ffaoX5o2v1jJDGlNhB0/export?format=html&gid=1387081185&widget=true&headers=false"></iframe>
+
 
 </body>
 </html>
