--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tablero Rifa Masajeador</title>
+  <title>Rifa Masajeador – Números</title>
 
   <style>
     body {
@@ -14,12 +14,39 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding-bottom: 40px;
     }
 
     h1 {
-      margin: 15px;
-      font-size: 22px;
+      margin: 20px 0 5px 0;
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
     }
+
+    #leyenda {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+      font-size: 16px;
+      align-items: center;
+    }
+
+    .tag {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .cuadro {
+      width: 18px;
+      height: 18px;
+      border-radius: 4px;
+      display: inline-block;
+    }
+
+    .verde { background: #2aa198; }
+    .rojo  { background: #dc322f; }
 
     #grid {
       display: grid;
@@ -47,15 +74,25 @@
 </head>
 
 <body>
-  <h1>Rifa Masajeador : TABLERO</h1>
+  <h1>Rifa Masajeador – Números para elegir</h1>
+
+  <div id="leyenda">
+    <div class="tag">
+      <span class="cuadro verde"></span> Disponible
+    </div>
+    <div class="tag">
+      <span class="cuadro rojo"></span> Vendido
+    </div>
+  </div>
 
   <div id="grid"></div>
 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbzIkHtukbtnHov3AyyPTqBf6piEoN3lQQ34QmtXphKHkkMtEFOvwcZbTPCf6BbP7RxB/exec";
 
-    // Crear grilla 1–100
     const grid = document.getElementById("grid");
+
+    // Construir la grilla 1–100
     for (let i = 1; i <= 100; i++) {
       const cell = document.createElement("div");
       cell.className = "num";
@@ -64,18 +101,18 @@
       grid.appendChild(cell);
     }
 
-    // Función para actualizar tablero
+    // Actualizar tablero consultando API
     async function actualizar() {
       try {
-        const resp = await fetch(API_URL + "?t=" + Date.now()); // evita caché
-        const vendidos = await resp.json(); // [{numero: 45, nombre: "Marina"}, ...]
+        const resp = await fetch(API_URL + "?t=" + Date.now());
+        const vendidos = await resp.json();
 
-        // Resetear todos a disponible
+        // Reset a verde todos
         for (let i = 1; i <= 100; i++) {
           document.getElementById("n" + i).classList.remove("vendido");
         }
 
-        // Pintar en rojo los números vendidos
+        // Pintar rojos
         vendidos.forEach(item => {
           const n = document.getElementById("n" + item.numero);
           if (n) n.classList.add("vendido");
@@ -86,7 +123,7 @@
       }
     }
 
-    // Actualizar cada 2 segundos
+    // Actualización cada 2s
     actualizar();
     setInterval(actualizar, 2000);
   </script>
