--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
     }
 
     h1 {
-      margin: 20px 0 5px 0;
+      text-align: center;
+      margin: 20px 0 15px 0;
+      line-height: 1.25;
+    }
+
+    .titulo-linea1 {
       font-size: 24px;
       font-weight: bold;
-      text-align: center;
+    }
+
+    .titulo-linea2 {
+      font-size: 18px;
+      margin-top: 4px;
+      opacity: 0.9;
     }
 
     #leyenda {
@@ -74,7 +84,11 @@
 </head>
 
 <body>
-  <h1>Rifa Masajeador – Números para elegir</h1>
+
+  <h1>
+    <div class="titulo-linea1">Rifa Masajeador</div>
+    <div class="titulo-linea2">Números para elegir</div>
+  </h1>
 
   <div id="leyenda">
     <div class="tag">
@@ -127,5 +141,6 @@
     actualizar();
     setInterval(actualizar, 2000);
   </script>
+
 </body>
 </html>
